[gd_scene load_steps=5 format=2]

[ext_resource path="res://Animal.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.572549, 0.6, 0.0470588, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.913725, 0.270588, 0.0470588, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 0.5 )

[node name="Animal" type="Area" groups=[
"Animal",
]]
script = ExtResource( 1 )

[node name="Chest" type="CSGBox" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24147, 0 )
height = 1.0
depth = 1.0
material = SubResource( 1 )

[node name="Head" type="CSGBox" parent="Chest"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1311, 1.15423, 0 )
width = 0.75
height = 0.75
depth = 0.75
material = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
shape = SubResource( 3 )

[node name="ThinkTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="DangerTimer" type="Timer" parent="."]
autostart = true

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RayCastDownFront" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
[connection signal="body_entered" from="." to="." method="_on_Animal_body_entered"]
[connection signal="timeout" from="ThinkTimer" to="." method="_on_ThinkTimer_timeout"]
[connection signal="timeout" from="DangerTimer" to="." method="_on_DangerTimer_timeout"]
